--- a/src/components/HomePage/components/Slider/index.css
+++ b/src/components/HomePage/components/Slider/index.css
@@ -72,3 +72,34 @@
         height: 30vh;
     }
 }
+
+.carousel-item img {
+    object-fit: contain;
+    width: 400px; /* Set a maximum width */
+    height: 400px; /* Set a maximum height */
+    margin: 0 auto;
+    display: block;
+}
+
+@media (max-width: 768px) {
+    .carousel-item img {
+        width: 100%;
+        height: auto;
+        max-width: 300px; /* Adjust for smaller screens */
+        max-height: 300px;
+    }
+}
+
+@media (max-width: 576px) {
+    .carousel-item img {
+        width: 100%;
+        height: auto;
+        max-width: 200px; /* Adjust for extra small screens */
+        max-height: 200px;
+    }
+}
+.carousel-control-next, .carousel-control-prev {
+   
+    top: 34% !important;
+   
+}
